--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #database
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/tmall_springboot?characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=900812
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto = none
 
@@ -14,12 +14,12 @@ spring.thymeleaf.cache=false
 #context
 server.context-path=/tmall_springboot
 
-#ÉèÖÃÉÏ´«ÎÄ¼ş´óĞ¡£¬Ä¬ÈÏÖ»ÓĞ1 m
+#è®¾ç½®ä¸Šä¼ æ–‡ä»¶å¤§å°ï¼Œé»˜è®¤åªæœ‰1 m
 spring.http.multipart.maxFileSize=100Mb
 spring.http.multipart.maxRequestSize=100Mb
 
-#jpa¶ÔÊµÌåÀàµÄÄ¬ÈÏ×Ö¶Î»á°ÑÍÕ·åÃüÃûµÄÊôĞÔ£¬×ª»»Îª×Ö¶ÎÃûµÄÊ±ºò×Ô¶¯¼ÓÉÏÏÂ»®Ïß¡£ Õâ¸öÅäÖÃµÄ×÷ÓÃ¾ÍÊÇÈ¥µôÏÂ»®Ïß
+#jpaå¯¹å®ä½“ç±»çš„é»˜è®¤å­—æ®µä¼šæŠŠé©¼å³°å‘½åçš„å±æ€§ï¼Œè½¬æ¢ä¸ºå­—æ®µåçš„æ—¶å€™è‡ªåŠ¨åŠ ä¸Šä¸‹åˆ’çº¿ã€‚ è¿™ä¸ªé…ç½®çš„ä½œç”¨å°±æ˜¯å»æ‰ä¸‹åˆ’çº¿
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-#ÏÔÊ¾ hibernateÔËĞĞµÄ sql Óï¾ä
+#æ˜¾ç¤º hibernateè¿è¡Œçš„ sql è¯­å¥
 spring.jpa.show-sql=true
